Added possibility to run test using Python
Fixes #3

Fixes #80